algo sin importancia

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -3,7 +3,7 @@
   <div class="login-card">
     <h1 class="login-titulo">Iniciar sesión</h1>
     <p class="login-subtitulo">
-      Accede a Electrónica Franko con tu cuenta para continuar comprando.
+      Accede a Electrónica-Tienda con tu cuenta para continuar comprando.
     </p>
 
     <form [formGroup]="formLogin" (ngSubmit)="onSubmitLogin()" novalidate>
@@ -35,7 +35,7 @@
     </form>
 
     <div class="login-separador">
-      <span>¿Eres nuevo en Electrónica Franko?</span>
+      <span>¿Eres nuevo en Electrónica-Tienda?</span>
       <button type="button" class="btn-link" (click)="abrirRegistro()">
         Crear una cuenta
       </button>
